--- a/src/components/itemcount/ItemCount.css
+++ b/src/components/itemcount/ItemCount.css
@@ -1,3 +1,10 @@
 .btn-comprar {
 	text-align: center;
 }
+
+.btn-danger {
+  background-color: #f3588c
+}
+.btn-danger:hover {
+  background-color: rgb(212, 58, 117)
+}
