--- a/src/components/itemdetail/ItemDetail.css
+++ b/src/components/itemdetail/ItemDetail.css
@@ -1,3 +1,8 @@
+body {
+	background-color: #EEEEEE;
+  
+}
+
 .img-detalle {
 	width: 50%;
 	margin-left: auto;
@@ -5,6 +10,7 @@
 }
 
 .cont-detalle {
+	padding-top: 300px;
 	padding:30px;
 	background-color:white
 	
